<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dung"
    android:orientation="horizontal"
    tools:context=".LoadScreen">




    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/RoomOne"
            android:text="Room One"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomTwo"
            android:text="Room Two"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomThree"
            android:text="Room Three"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomFour"
            android:text="Room Four"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomFive"
            android:text="Room Five"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomSix"
            android:text="Room Six"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomSeven"
            android:text="Room Seven"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomEight"
            android:text="Room Eight"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/RoomNine"
            android:text="Room Nine"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>