<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:background="#191919">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/CryptsAndCryptograms"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="40sp"
            android:gravity="center"
            android:textColor="#e5e5e5"
            android:background="#4c4c4c"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Crypts and Cryptograms"
            android:textStyle="bold|italic"
            />

        <Button
            android:id="@+id/btnNewGame"
            android:text="New Game"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:textSize="30sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:textColor="#e5e5e5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold|italic"
            />

        <Button
            android:id="@+id/btnLoad"
            android:text="Load"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:textSize="30sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:textColor="#e5e5e5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold|italic"
            />

        <Button
            android:id="@+id/btnHelp"
            android:text="Help"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:textSize="30sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:textColor="#e5e5e5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold|italic"
            />

        <Button
            android:id="@+id/btnSettings"
            android:text="Settings"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:textSize="30sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:textColor="#e5e5e5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold|italic"
            />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
