<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageBox">


    <!-- TODO: Update blank fragment layout -->
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/main_box_image"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></pl.droidsonroids.gif.GifImageView>

    <TextView
        android:id="@+id/main_box_text"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="27dp"
        android:autoText="false"
        android:fontFamily="monospace"
        android:maxLines="3"
        android:minLines="1"
        android:text="If you can see this text and you are not messing with design layout, something is wrong."
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_box_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_box_image" />
</androidx.constraintlayout.widget.ConstraintLayout>